# cmake_cpputest_backbone

./: CMakeLists.txt  Module1.cpp  Module1.hpp  bscript.sh  myapp.cpp  myapp.hpp  test.cpp
Module1/: CMakeLists.txt
tests/: CMakeLists.txt  test.cpp
